...

  return (
    <View className="flex-1 items-center justify-center gap-12 bg-background px-6">
      <StyledImage source={theme === "dark" ? logoDark : logoLight} className="aspect-158/22 w-50" />

      <Button variant="accent" onPress={handleLogin} disabled={busy}>
        {busy ? <LoadingSpinner size="small" /> : <Text>Sign in with Gumroad</Text>}
      </Button>
    </View>
  );
}

