...
          successMessage: "Email updated successfully.",
        }),
    });
  return (
    <Card>
      <CardHeader className="flex-row items-center justify-between">
        <CardTitle>Email</CardTitle>
        {customer && !customer.is_existing_user && (
          <Text className="text-sm text-accent underline" onPress={editEmail}>
            Edit
          </Text>
        )}
      </CardHeader>
...
